--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ PRODUCTS_CACHE_TTL_MS=600000
 USER_TTL_MS=1800000
 ADMIN_TOKEN=pon_un_token_seguro_aqui
 
+# Datos de la empresa para proforma y enlaces
+COMPANY_NAME=UPCONS Importador
+COMPANY_ADDRESS=Av. Principal 123, Ciudad, País
+COMPANY_PHONE=+593999999999
+COMPANY_WEBSITE=https://upcons.example.com
+COMPANY_BRANCHES=Matriz - Ciudad|Sucursal Norte - Ciudad|Sucursal Sur - Ciudad
