--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "openai": "^4.104.0"
+    "openai": "^4.104.0",
+    "pdfkit": "^0.13.0"
   }
 }
