--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "openai": "^4.104.0",
-    "pdfkit": "^0.13.0"
+    "pdfkit": "^0.13.0",
      "cors": "^2.8.5"
   }
 }
